<resources>
    <string name="app_name">pfeUpdated</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_activer_compte">Activer Compte</string>
    <string name="menu_seconnecter">Se Connecter</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_paramettres">Paramettres</string>
    <string name="menu_rechercher">Rechercher</string>
    <string name="menu_offres">Mes offres</string>
    <string name="menu_nouveau_offre">Nouveau Offre</string>
    <string name="menu_avis">Les Avis</string>
    <string name="menu_laisser_avis">Laisser Avis</string>
    <string name="menu_carte">Ma Carte</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_creer_compte">Créer Compte</string>
    <string name="menu_scan_qrcode">Scan QR Code</string>
    <string name="menu_pieChar">PieChar</string>
    <string name="menu_compte">Mon compte</string>

    <string name="userName">User Name</string>
    <string name="steName">Ste Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_exit">Exit</string>
</resources>
