<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/secBlue"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

<!--            <ImageView-->
<!--                android:id="@+id/usericone"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:contentDescription="@string/nav_header_desc"-->
<!--                android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--                app:srcCompat="@mipmap/ic_launcher_round" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/usericone"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/avatar"
                app:civ_border_width="0.5dp"
                app:civ_border_color="#4B4A4A"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/userName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#2699FB"
                android:textStyle="bold"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/userstename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#00FFFFFF"
                android:text="@string/steName"
                android:textColor="#2699FB"
                android:textSize="15dp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
